--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,11 @@
     <string name="countries">Countries</string>
     <string name="currencies">Currencies</string>
     <string name="filters">Filters</string>
+    <string name="fragments">Login</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_email_fragment">Hello email fragment</string>
+    <string name="hello_phone_fragment">Hello phone fragment</string>
+    <string name="hello_social_fragment">Hello social fragment</string>
     <string name="empty_password">empty password</string>
 
 </resources>
