update develop branch

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,5 +4,8 @@
     <string name="countries">بلاد</string>
     <string name="currencies">العملات</string>
     <string name="filters">المرشحات</string>
+    <string name="fragments">تسجيل الدخول</string>
+    <string name="this_is_a_test_app">هذا البرنامج تجريبى</string>
+    <string name="hello_world">أهلا بالعالم!</string>
 
 </resources>
