--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="countries">Countries</string>
     <string name="currencies">Currencies</string>
     <string name="filters">Filters</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragments">Login</string>
+    <string name="this_is_a_test_app">This is a test app.</string>
+    <string name="hello_world">Hello World !</string>
 
 </resources>
