--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,7 +5,7 @@
     <string name="currencies">العملات</string>
     <string name="filters">المرشحات</string>
     <string name="fragments">تسجيل الدخول</string>
-    <string name="this_is_a_test_app">هذا البرنامج تجريبى</string>
-    <string name="hello_world">أهلا بالعالم!</string>
+    <string name="testApp">هذا البرنامج تجريبى</string>
+    <string name="helloWorld">أهلا بالعالم!</string>
 
 </resources>
