--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="currencies">Currencies</string>
     <string name="filters">Filters</string>
     <string name="fragments">Login</string>
-    <string name="this_is_a_test_app">This is a test app.</string>
-    <string name="hello_world">Hello World !</string>
+    <string name="testApp">This is a test app.</string>
+    <string name="helloWorld">Hello World !</string>
 
 </resources>
